# DIGITAL-LABOUR

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  PRD.md  Procfile  README.md  REPO_INDEX.json  REPO_INDEX.md  THE_PLAN.md  _build_check.py  _cdp_deploy.py  _freelancer_deploy.py  _upwork_deploy.py  bitrage.py  bitrage_monitor.py  fly.toml  launch.py  matrix_boot.py  railway.json  railway.toml  requirements.txt  setup_keys.py  worker.py
super_agency/: .dockerignore  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .pylintrc  ADMIN_SETUP_REPO_DEPOT_TASKS.ps1  AGENT_ARCHITECTURE_SPECIFICATION.md  AGENT_INTEGRATION_SPECIFICATION.md  API_SETUP_NEW_ACCOUNTS_GUIDE.md  ARCHIVED_README.md  BACKLOG_UPDATE_MEMORY_DOCTRINE.md  BRS_MANIFEST.json  CHANGELOG.md  COMMAND_CENTER_README.md  CONTRIBUTING.md  CPU_MAXIMIZER_README.md  DAILY_OPS.bat  DEPARTMENTAL_RESTRUCTURING_REPORT.md  DEPLOYMENT_SUMMARY.md  DISTRIBUTED_COMMAND_CENTER_SETUP.md  DL_DOCTRINE_MEMORY.md  DL_LAUNCH_GUIDE.md  DL_MANIFEST.json  DL_MEMORY_DOCTRINE.md  DL_OPERATIONAL_ARCHITECTURE.md  DOCTRINE_COUNCIL_52.md  Dockerfile  ENHANCED_AGENT_WORKFLOWS_README.md  FAIL_SAFE_README.md  GASKET_STATUS.md  GO_LIVE_ANNOUNCEMENT.md  GO_LIVE_STATUS.md  INNER_COUNCIL_SETUP_GUIDE.md  LAUNCH_MATRIX_MONITOR.bat  LAUNCH_MATRIX_MONITOR_FIXED.bat  LEGACY.md  LICENSE  LOCAL_DEV_PLAN.md  LOCAL_EXECUTION_GUIDE.md  MATRIX_MAXIMIZER_REBUILD_PLAN.md  (+179 more)
super_agency/MATRIX_MAXIMIZER/: README.md  dashboard.py  flask_dashboard.py
super_agency/NCC/: MEMORY_STATE_20260220.md  README.md  cio_intelligence_leadership.py  ncc_orchestrator.py
super_agency/NCL/: events.ndjson
super_agency/agents/: __init__.py  agent_gasket.py  agent_optimus.py  alignment_monitor.py  automation_manager.py  bus_subscribers.py  ceo_agent.py  cfo_agent.py  cio_agent.py  cmo_agent.py  common.py  context_manager.py  context_manager_agent.py  council.py  cto_agent.py  daily_brief.py  dl_bridge.py  executive_council_orchestrator.py  gasket_openclaw_bridge.py  hierarchy.py  integrate_cell.py  intelligent_repo_builder.py  learning_agent.py  marketplace.py  message_bus.py  ncl_catalog.py  openclaw_integration.py  openclaw_system_bridge.py  orchestrator.py  parallel_portfolio_intel.py  portfolio_autodiscover.py  portfolio_autotier.py  portfolio_intel.py  portfolio_maintainer.py  portfolio_selfheal.py  production_manager.py  qa_manager.py  repo_sentry.py  research_intelligence.py  research_manager.py  (+2 more)
super_agency/az_decisions/: decision_df263bb5920040d3.json
super_agency/cicd_workflows/: DEPLOYMENT_GUIDE.md
super_agency/companies/: README.md
super_agency/config/: brain_state.json  global.yaml  graduation_criteria.json  intelligence_watchlist.json  research_projects.json  scheduler_state.json  settings.json  skill_registry.json
super_agency/council_meetings/: meeting_20260224_055955.json  meeting_20260224_205845.json  meeting_20260224_205906.json  meeting_20260224_210258.json  meeting_20260224_210633.json  meeting_20260224_210740.json  meeting_20260225_000024.json  meeting_20260225_060024.json  meeting_20260225_120035.json  meeting_20260225_180018.json  meeting_20260225_222121.json  meeting_20260225_222143.json  meeting_20260226_190858.json  meeting_20260226_192359.json  meeting_20260226_193900.json  meeting_20260228_055309.json  (+31 more)
(+5182 files in other folders)
