[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-rage-systems"
version = "2.0.0"
description = "Bit Rage Systems - Digital Labour Autonomous AI Orchestration Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Bit Rage Systems", email = "dev@resonanceenergy.com"}
]
keywords = ["ai", "agents", "automation", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "streamlit>=1.30.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "autoflake>=2.2.0",
    "pre-commit>=3.6.0",
]
ai = [
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
]
full = [
    "bit-rage-systems[dev]",
    "bit-rage-systems[ai]",
]

[project.urls]
Homepage = "https://github.com/ResonanceEnergy/Super-Agency"
Documentation = "https://github.com/ResonanceEnergy/Super-Agency/docs"
Repository = "https://github.com/ResonanceEnergy/Super-Agency"
Issues = "https://github.com/ResonanceEnergy/Super-Agency/issues"

[project.scripts]
bit-rage-systems = "run_super_agency:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "inner_council*", "MATRIX_MAXIMIZER*", "MATRIX_MONITOR*"]

[tool.black]
line-length = 99
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | build
    | dist
    | archive
    | repo_backups
    | repo_depot
)/
'''

[tool.isort]
profile = "black"
line_length = 99
skip_gitignore = true
skip = [".venv", "archive", "repo_backups", "repo_depot"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "archive",
    "repo_backups",
    "repo_depot",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
recursive = true
exclude = "archive,repo_backups,repo_depot,.venv,tests/manual"

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "archive",
    "repo_backups",
    "repo_depot",
    ".venv",
    "build",
    "dist",
    "tests/manual",
]
